--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Tdar Plugins Repo",
   "main": "",
   "dependencies": {
+    "@bitmovin/api-sdk": "^1.203.0",
     "chalk": "^4.1.2",
     "import-fresh": "^3.3.0",
     "lodash": "^4.17.21"
@@ -14,11 +15,11 @@
     "@typescript-eslint/parser": "^4.14.1",
     "chai": "^4.3.6",
     "eslint": "^7.14.0",
+    "eslint_d": "^11.1.1",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prefer-arrow-functions": "^3.1.4",
-    "eslint_d": "^11.1.1"
+    "eslint-plugin-prefer-arrow-functions": "^3.1.4"
   },
   "scripts": {
     "test": "node ./tests/runTests.js",
